error notification added via generic notifications file. Word overflow fixed by ZA

--- a/index.css
+++ b/index.css
@@ -62,7 +62,10 @@ ul li {
     border-radius: 8px;
     flex-grow: 1;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    max-width: 320px; 
+    word-wrap: break-word;
 }
 
 ul li:hover {
